src/scss/components/directory-menu/filter-menu/_filter-menu.scss
/*
* @Author: Sebastian Castro
* @Date:   2017-02-28 13:25:52
* @Last Modified by:   Sebastian Castro
* @Last Modified time: 2017-08-09 13:15:56
*/
@import 'favorite-filter';
@import 'pending-filter';
@import 'subcategorie-item';
@import 'subcategorie-option-item';
@import 'subcategory-depth-2';

#directory-menu 
{
	.filter-menu 
	{ 
		width: 100%;
    position: relative;
    @include flexbox();
    @include flex-flow(row nowrap); 
    @include flex(1 auto);
  }

	.main-categories
	{
		width: 3.5rem;
		padding-top: .6rem;
    height: 100%;
    overflow-y: scroll;

    .icon
    {
	    width: 3.5rem;
    	height: 3.5rem;
    	line-height: 3.5rem;
	    margin: 0;
	    padding-right: 8px;
	    text-align: center;
	    position: relative;
	    //border-bottom: 1px solid #616161;

	    .main-option-tooltip
	    {
	    	display: none;
	    }

	    &:before
	    {
	    	position: absolute;
		    top: 1rem;
		    left: .8rem;
	    }

	    &:not(.active):hover
	    {
	    	cursor: pointer;

		    .main-option-tooltip
		    {
		    	display: block;
			    position: absolute;
			    left: 4rem;
			    top: .5rem;
			    /* bottom: 0; */
			    height: 2.5rem;
			    line-height: 2.5rem;
			    z-index: 100;
			    width: 14rem;
			    color: #efefef;
			    font-size: 1rem;
			    border-radius: 5px;
		    }
	    }

	    &.active
	    {
    		color: white;
    		padding-right: 8px;    		
	    }
    }

    .main-gogo-icon-background
    {
  	  position: absolute;
  	  top : .6rem;    
	    border-radius: 0 50% 50% 0;
    }
	}

	.sub-categories
	{
		@include flex(1 auto);
		padding-left: 7px;
    padding-right: 4px;
    background-color: #eeeeee;    

		.sub-categorie-main-title
		{
			height: 3rem;
			line-height: 3rem;
			font-weight:bold;
			text-align:center;	
		}

		.sub-categories-content
		{
			//position: absolute;
			//width: 100%;
			height: calc(100% - 3rem);
			//top: 2.7rem;
			//bottom: 0;
			@include border-radius(5px);
			padding-right: 5px;
			padding-top:5px;
			background-color: white;

			ul
			{
				height: 100%;
				margin: 0;
				border: 0;
				box-shadow: none;		
				padding-bottom: .8rem;
				overflow-y: auto;
				overflow-x: hidden;
				@extend .custom-scroll-bar-light;
			}
		}
	}		
}

